# advent-of-code

./: .gitignore  LICENSE  README.md  advent-of-code.cabal  flake.nix
app/: Main.hs
src/Day/: Five.hs  Four.hs  One.hs  Seven.hs  Six.hs  Three.hs  Two.hs
test/Day/: FiveSpec.hs  FourSpec.hs  OneSpec.hs  SevenSpec.hs  SixSpec.hs  ThreeSpec.hs  TwoSpec.hs
