name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matt-keibler/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Keibler
maintainer:          matthew.keibler@gmail.com
copyright:           2017 Matthew Keibler
category:            Puzzle
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day.One
                     , Day.Two
                     , Day.Three
  build-depends:       base >= 4.7 && < 5
                     , listsafe
  default-language:    Haskell2010

executable advent-of-code
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , advent-of-code
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-keibler/advent-of-code
